[gd_scene load_steps=14 format=3 uid="uid://dx3ytnkn1nqvc"]

[ext_resource type="Script" uid="uid://cuwvxt8bdlau4" path="res://Scripts/menu.gd" id="1_e4psd"]
[ext_resource type="AudioStream" uid="uid://bl8l7uw8x8wfn" path="res://Assets/Sfx/01 - The Journey.mp3" id="2_0s634"]
[ext_resource type="Texture2D" uid="uid://c4xownexxh35x" path="res://Assets/sample BG1.png" id="3_s18om"]
[ext_resource type="Script" uid="uid://co6jy2va2ehgo" path="res://Scripts/audio_control.gd" id="4_ew550"]
[ext_resource type="Texture2D" uid="uid://bg4pf1c5k705o" path="res://Assets/katipunan logo.png" id="5_34fp6"]
[ext_resource type="Theme" uid="uid://ou768xy87pf7" path="res://Buttons.tres" id="5_jsrd8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_il6dv"]
texture = ExtResource("3_s18om")
modulate_color = Color(0.302116, 0.256868, 0.122755, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42p2d"]
bg_color = Color(0.752582, 0.752582, 0.752582, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d14xf"]
bg_color = Color(0.160522, 0.16527, 0.169314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v8xt"]
bg_color = Color(0.79637, 0.486177, 0.652401, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxLine" id="StyleBoxLine_uecit"]
color = Color(0.994108, 0.994108, 0.994108, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_c05de"]
color = Color(0.00605831, 0.548689, 0.614194, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1lo5o"]
color = Color(0.00605831, 0.548689, 0.614194, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 8

[node name="Menu" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4psd")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(499, 459)
stream = ExtResource("2_0s634")
autoplay = true
bus = &"Music"

[node name="Panel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_il6dv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 249.0
offset_top = 76.0
offset_right = 905.0
offset_bottom = 352.0
texture = ExtResource("5_34fp6")
expand_mode = 1

[node name="Mainbuttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = 11.0
offset_right = 77.5
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Start" type="Button" parent="Mainbuttons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_jsrd8")
text = "Start"

[node name="Options" type="Button" parent="Mainbuttons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_jsrd8")
text = "Options"

[node name="Exit" type="Button" parent="Mainbuttons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_jsrd8")
text = "Exit"

[node name="OptionMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -141.0
offset_right = 113.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="OptionMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = 117.0
offset_right = 77.5
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("5_jsrd8")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_42p2d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d14xf")
theme_override_styles/hover = SubResource("StyleBoxFlat_1v8xt")
text = "Back"

[node name="Label" type="Label" parent="OptionMenu"]
layout_mode = 0
offset_left = 11.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 21
text = "Options"
horizontal_alignment = 1

[node name="AudioControl" type="HSlider" parent="OptionMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -8.0
offset_right = 88.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_uecit")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_c05de")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_1lo5o")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_ew550")
audio_bus_name = "Music"

[node name="Label" type="Label" parent="OptionMenu/AudioControl"]
layout_mode = 0
offset_left = 0.5
offset_top = -26.0
offset_right = 46.5
offset_bottom = -3.0
text = "Music
"

[node name="sfx" type="HSlider" parent="OptionMenu"]
layout_mode = 0
offset_left = 25.0
offset_top = 89.0
offset_right = 196.0
offset_bottom = 105.0
theme_override_styles/slider = SubResource("StyleBoxLine_uecit")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_c05de")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_1lo5o")
value = 70.0

[node name="Label" type="Label" parent="OptionMenu/sfx"]
layout_mode = 0
offset_left = 5.0
offset_top = -25.0
offset_right = 45.0
offset_bottom = -2.0
text = "SFX"

[node name="Node" type="Node" parent="."]

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="Mainbuttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Mainbuttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Mainbuttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="OptionMenu/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="OptionMenu/AudioControl" to="OptionMenu/AudioControl" method="_on_value_changed"]
